--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,8 @@
     "next": "16.0.3",
     "next-themes": "^0.4.6",
     "react": "19.2.0",
-    "react-dom": "19.2.0"
+    "react-dom": "19.2.0",
+    "recharts": "^3.5.1"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
