--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -6,4 +6,8 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "fastapi[standard]>=0.128.0",
+    "psycopg2-binary>=2.9.11",
+    "pwdlib[argon2]>=0.3.0",
+    "python-jose[cryptography]>=3.5.0",
+    "sqlmodel>=0.0.31",
 ]
