--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = [
     "fastapi[standard]>=0.128.0",
     "psycopg2-binary>=2.9.11",
     "pwdlib[argon2]>=0.3.0",
+    "pydantic-settings>=2.12.0",
     "python-jose[cryptography]>=3.5.0",
     "sqlmodel>=0.0.31",
 ]
