added files in the .ignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
 .env
-./backend/uv.lock
 ./backend/.venv
-
+./*/.env
 ./frontend/.next
+./*/*/__pycache__
 
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
