--- a/backend/Dockerfile.dev
+++ b/backend/Dockerfile.dev
@@ -2,11 +2,15 @@ FROM python:3.12-slim
 
 WORKDIR /backend
 
+
+
 RUN pip install --no-cache-dir uv
+
+COPY pyproject.toml uv.lock ./
 
 COPY . .
 
-RUN uv sync --frozen
+RUN uv sync 
 
 EXPOSE 8000
 
