--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "axios": "^1.13.4",
     "lucide-react": "^0.556.0",
     "next": "16.0.10",
     "next-themes": "^0.4.6",
