user/me and frontend api integration

--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,10 @@
 # typescript
 ./frontend/*.tsbuildinfo 
 ./frontend/next-env.d.ts
+
+
+
+./backend/__pycache__
+./backend/__pycache__/*
+./backend/*/__pycache__
+
