--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,12 +9,14 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.11.2",
     "axios": "^1.13.4",
     "lucide-react": "^0.556.0",
     "next": "16.0.10",
     "next-themes": "^0.4.6",
     "react": "19.2.0",
     "react-dom": "19.2.0",
+    "react-redux": "^9.2.0",
     "recharts": "^3.5.1"
   },
   "devDependencies": {
