--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "next-themes": "^0.4.6",
     "react": "19.2.0",
     "react-dom": "19.2.0",
+    "react-hot-toast": "^2.6.0",
     "react-redux": "^9.2.0",
     "recharts": "^3.5.1"
   },
