--- a/compose.yaml
+++ b/compose.yaml
@@ -1,23 +1,30 @@
 name : "pharmacy_mangement_system"
 services:
     backend:
-        image: "python:3.12-slim"
         container_name: "pharmacy_mangement_system_backend"
         build:
             context: ./backend
-            dockerfile: Dockerfile.dev
+            dockerfile: Dockerfile
         ports:
             - "8000:8000"
         volumes:
             - ./backend:/app
+            - /app/.venv
+        env_file:
+            - ./backend/.env
     
     frontend:
-        image: "node:22-alpine"
         container_name: "pharmacy_mangement_system_frontend"
         build:
             context: ./frontend
-            dockerfile: Dockerfile.dev
+            dockerfile: Dockerfile
         ports:
             - "3000:3000"
         volumes:
             - ./frontend:/app
+            - ./frontend/node_modules
+            - ./frontend/.next
+        environment:
+            - NEXT_PUBLIC_API_URL=http://localhost:8000
+        depends_on:
+            - backend
