changes in the compose.yaml and front

--- a/compose.yaml
+++ b/compose.yaml
@@ -1,5 +1,17 @@
 name : "pharmacy_mangement_system"
 services:
+    db:
+        image: postgres:16-alpine
+        container_name: pharmacy_db
+        environment:
+            - POSTGRES_USER=postgres
+            - POSTGRES_PASSWORD=postgres
+            - POSTGRES_DB=pms
+        ports:
+            - "5432:5432"
+        volumes:
+            - postgres_data:/var/lib/postgresql/data
+
     backend:
         container_name: "pharmacy_mangement_system_backend"
         build:
@@ -22,9 +34,12 @@ services:
             - "3000:3000"
         volumes:
             - ./frontend:/app
-            - ./frontend/node_modules
-            - ./frontend/.next
+            - /app/node_modules
+            - /app/.next
         environment:
             - NEXT_PUBLIC_API_URL=http://localhost:8000
         depends_on:
             - backend
+
+volumes:
+    postgres_data:
